--- a/CanYou3/HealthInfo.storyboard
+++ b/CanYou3/HealthInfo.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pXh-SB-bJt">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="em4-UA-yMm">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,35 +22,37 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ihx-FO-nMc" id="XHA-wk-xKq">
-                                    <rect key="frame" x="0.0" y="0.0" width="336" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="336" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="PNd-3C-h4n">
-                                            <rect key="frame" x="8" y="31.5" width="320" height="4"/>
-                                            <color key="tintColor" red="0.0" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="4" id="Mat-3E-3X1"/>
-                                            </constraints>
-                                        </progressView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a8I-Pa-2w0">
-                                            <rect key="frame" x="8" y="5" width="320" height="18.5"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="a8I-Pa-2w0">
+                                            <rect key="frame" x="8" y="5" width="320" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yes-NU-bR0" customClass="GTProgressBar" customModule="GTProgressBar">
+                                            <rect key="frame" x="8" y="27" width="320" height="9"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="barBorderWidth">
+                                                    <real key="value" value="1"/>
+                                                </userDefinedRuntimeAttribute>
+                                            </userDefinedRuntimeAttributes>
+                                        </view>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="PNd-3C-h4n" firstAttribute="top" secondItem="a8I-Pa-2w0" secondAttribute="bottom" constant="8" id="5Vm-i5-3r7"/>
                                         <constraint firstAttribute="trailing" secondItem="a8I-Pa-2w0" secondAttribute="trailing" constant="8" id="BEZ-HG-x9Q"/>
                                         <constraint firstItem="a8I-Pa-2w0" firstAttribute="top" secondItem="XHA-wk-xKq" secondAttribute="top" constant="5" id="SFc-SU-ko4"/>
+                                        <constraint firstItem="Yes-NU-bR0" firstAttribute="leading" secondItem="XHA-wk-xKq" secondAttribute="leading" constant="8" id="Wg9-b3-nQi"/>
                                         <constraint firstItem="a8I-Pa-2w0" firstAttribute="leading" secondItem="XHA-wk-xKq" secondAttribute="leading" constant="8" id="Z6Q-ZV-Itg"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="PNd-3C-h4n" secondAttribute="trailing" id="bSA-zq-own"/>
-                                        <constraint firstItem="PNd-3C-h4n" firstAttribute="leading" secondItem="XHA-wk-xKq" secondAttribute="leadingMargin" id="nwJ-qa-ILY"/>
-                                        <constraint firstItem="PNd-3C-h4n" firstAttribute="bottom" secondItem="XHA-wk-xKq" secondAttribute="bottomMargin" id="tmM-J8-AzD"/>
+                                        <constraint firstAttribute="trailing" secondItem="Yes-NU-bR0" secondAttribute="trailing" constant="8" id="Z8m-Ix-Wou"/>
+                                        <constraint firstItem="Yes-NU-bR0" firstAttribute="top" secondItem="a8I-Pa-2w0" secondAttribute="bottom" constant="5" id="ZZQ-c2-WNF"/>
+                                        <constraint firstAttribute="bottom" secondItem="Yes-NU-bR0" secondAttribute="bottom" constant="8" id="po4-9S-2m7"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="progressView" destination="PNd-3C-h4n" id="ArK-op-KX5"/>
+                                    <outlet property="progressView" destination="Yes-NU-bR0" id="Olo-h7-LXl"/>
                                     <outlet property="titleLabel" destination="a8I-Pa-2w0" id="gy8-QN-FNA"/>
                                 </connections>
                             </tableViewCell>
@@ -61,11 +62,45 @@
                             <outlet property="delegate" destination="pXh-SB-bJt" id="i0n-wL-tMr"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Health Infomation" id="Tgu-9e-2YY"/>
+                    <navigationItem key="navigationItem" title="Health Infomation" id="Tgu-9e-2YY">
+                        <barButtonItem key="rightBarButtonItem" image="close" id="A8h-ac-H1W">
+                            <connections>
+                                <action selector="hero_dismissViewController" destination="pXh-SB-bJt" id="6Ic-MP-Cj2"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="isHeroEnabled" value="YES"/>
+                        <userDefinedRuntimeAttribute type="string" keyPath="heroModalAnimationTypeString" value="fade"/>
+                    </userDefinedRuntimeAttributes>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kS5-6t-Tlm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1070" y="482"/>
+            <point key="canvasLocation" x="2948" y="481.70914542728639"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="HQJ-GB-rrF">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="em4-UA-yMm" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="nkn-CD-3xG">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="isHeroEnabled" value="YES"/>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <segue destination="pXh-SB-bJt" kind="relationship" relationship="rootViewController" id="cpx-Zm-mK6"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fMY-QB-GxP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2008.8" y="481.70914542728639"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="close" width="24" height="24"/>
+    </resources>
 </document>
